add skin for logout
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7182 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/view/skins/MainCloseBtnSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/view/skins/MainCloseBtnSkin.mxml
@@ -21,12 +21,12 @@
 		<s:State name="disabled"/>
 	</s:states>
 	
-	<!--<s:Rect id="fill"
+	<s:Rect id="fill"
 			height="10" width="10">
 		<s:fill>
 			<s:SolidColor color="0x000000" alpha="1"/>
 		</s:fill>
-	</s:Rect>-->
+	</s:Rect>
 	
 	<s:Line xFrom="1.5" yFrom="1.5" xTo="8.5" yTo="8.5" stroke="{stroke1}"/>
 	<s:Line xFrom="8.5" yFrom="1.5" xTo="1.5" yTo="8.5" stroke="{stroke1}"/>
