--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -916,8 +916,9 @@
 			<mx:VBox height="100%" minWidth="220" width="220" horizontalScrollPolicy="off">
 				<mx:HBox paddingLeft="3" paddingRight="3" color="#FFFFFF" width="100%">
 					<mx:ComboBox id="cmboxProduct"
-								 width="100%"
+								 width="{tree.width}"
 								 labelField="title"
+								 toolTip="{cmboxProduct.selectedItem.title}"
 								 dataProvider="{{label:'VDOM Editor'}}"
 								 fillColors="#333333"
 								 iconColor="0xCCCCCC"
