Add ApplicationManagerWindow. Step 8 Fix bugs
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7198 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/IconChooser.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/IconChooser.mxml
@@ -22,10 +22,10 @@
 			  height="64" width="64" />
 	
 	<s:Label buttonMode="true" text="{ resourceManager.getString( 'Core_General', 'iconchooser_select_icon' ) }"
-			 fontFamily="Verdana" fontSize="14" textDecoration="underline"
+			 fontFamily="Verdana" fontSize="14" textDecoration="underline" color="#FFFFFF"
 			 click="dispatchEvent( new IconChooserEvent (IconChooserEvent.OPEN_ICON_LIST ) );" />
 	
 	<s:Label buttonMode="true" text="{ resourceManager.getString( 'Core_General', 'iconchooser_load_from_computer' ) }"
-			 fontFamily="Verdana" fontSize="14" textDecoration="underline"
+			 fontFamily="Verdana" fontSize="14" textDecoration="underline" color="#FFFFFF"
 			 click="dispatchEvent( new IconChooserEvent( IconChooserEvent.LOAD_ICON ))" />
 </s:VGroup>
