--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -136,7 +136,9 @@
 								<mx:Image id="iconApplication" width="{iconApplication.height}" height="60%"/>
 								
 								<s:VGroup width="100%" height="60%">
-									<s:Label id="nameApplication" color="#FFFFFF" fontSize="14"/>
+									<s:TextInput id="nameApplication" 
+												 width="100%" borderVisible="false" editable="false" selectable="false" contentBackgroundAlpha="0"
+												 color="#FFFFFF" fontSize="14"/>
 									
 									<s:Label id="applicationManagerLabel" 
 											 color="#25D9FF" textDecoration="underline" text="Open App Manager"
