refresh treeObjectsPanel after add/delete a object
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7202 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
@@ -47,10 +47,11 @@
 
 			override public function set data( value : Object ) : void
 			{
-				if ( super.data != value )
+				super.data = value;
+
+//				if ( super.data != value )
 					dataChanged = true
 
-				super.data = value;
 
 				_data = value as XML;
 			}
@@ -95,7 +96,7 @@
 
 				dataChanged = false;
 
-				componentIcon.source = null;
+//				componentIcon.source = null;
 
 				if ( !_data )
 					return
