Fix bugs in Resource Manager and Copy with type SVGNode
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7203 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ToolbarPanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ToolbarPanel.mxml
@@ -6,6 +6,8 @@
 
 	<fx:Script>
 		<![CDATA[
+			import com.zavoo.svg.nodes.SVGNode;
+			
 			import mx.core.IVisualElement;
 			
 			import net.vdombox.ide.common.TypeInterface;
@@ -93,6 +95,8 @@
 						
 					case TypeInterface.TEXT_EDITOR:
 					{
+						if ( _selectedRenderer.editableComponent is SVGNode )
+								return;
 						var textToolbar : TextToolbar = new TextToolbar();
 						
 						textToolbar.addEventListener(Event.CHANGE, toolbarChageHandle);
