--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -133,7 +133,7 @@
 							</s:Rect>
 							
 							<s:HGroup width="100%" height="100%" verticalAlign="middle" paddingLeft="10" gap="10">
-								<mx:Image id="iconApplication" width="{iconApplication.height}" height="60%"/>
+								<mx:Image id="iconApplication" width="{iconApplication.height}" height="60%" smoothBitmapContent="true"/>
 								
 								<s:VGroup width="100%" height="60%">
 									<s:TextInput id="nameApplication" 
