--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxObjectAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxObjectAttribute.mxml
@@ -46,9 +46,9 @@
 					if ( element == objectListVO.id )
 						selectedItem = objectListVO;
 				}
-//				comboBoxData.sort = new Sort();
-//				comboBoxData.sort.fields = [ new SortField( "name", true ) ];
-//				comboBoxData.refresh();
+				comboBoxData.sort = new Sort();
+				comboBoxData.sort.fields = [ new SortField( "name", true ) ];
+				comboBoxData.refresh();
 				
 				valueField.dataProvider = comboBoxData;
 				valueField.selectedItem = selectedItem;
@@ -75,7 +75,8 @@
 	</s:Rect>
 	<mx:Text id="txt"/>
 	<s:DropDownList id="valueField" width="100%" height="100%"
-				change="changeHandler()" itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.ComboBoxObjectItemRenderer"/>
+				itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.ComboBoxObjectItemRenderer"
+				change="changeHandler()" open="{valueField.scroller.setStyle( 'horizontalScrollPolicy', 'off' ) }" />
 	
 	
 </s:Group>
