App manadger refactor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7214 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -11,6 +11,9 @@
 
 	<fx:Script>
 		<![CDATA[
+			import mx.binding.utils.BindingUtils;
+			
+			import net.vdombox.ide.common.vo.ResourceVO;
 			import net.vdombox.ide.core.events.MainWindowEvent;
 			static private const exclusions : Array = [ "backgroundRect", "contentGroup", "titleBar",
 														"titleBarBackgroundRect", "statusText", "borderBgFill" ];
@@ -19,6 +22,8 @@
 			{
 				return exclusions;
 			}
+			
+			
 		]]>
 	</fx:Script>
 
