Edit LoginView step2
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7215 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/InitialWindow.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/InitialWindow.mxml
@@ -2,7 +2,8 @@
 <s:Window xmlns:components="net.vdombox.ide.core.view.components.*"
 		  xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
-		  height="300" width="550"
+		  height="410" width="583"
+		  minHeight="410" minWidth="583"
 		  skinClass="net.vdombox.ide.core.view.skins.InitialWindowSkin"
 		  mouseDown="window_mouseDownHandler( event )"
 		  resizable="false" showStatusBar="false" systemChrome="{ NativeWindowSystemChrome.NONE }" transparent="true">
