--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/LoginView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/LoginView.mxml
@@ -89,64 +89,83 @@
 			
 		]]>
 	</fx:Script>
+	
+	<s:Rect width="100%" height="100%" radiusX="10" radiusY="10">
+		<s:fill>
+			<s:SolidColor color="#424242"/>
+		</s:fill>
+	</s:Rect>
 
-	<s:VGroup gap="10" styleName="loginForm"
-			  left="20" right="100" top="50">
-		<s:HGroup gap="20" width="100%"
-				  verticalAlign="middle">
-			
-			<s:Label text="{ resourceManager.getString( 'LoginForm', 'hostname' ) }" width="100%"
-					 color="white" fontFamily="Verdana" fontSize="14" textAlign="right"/>
-			
-			<s:ComboBox id="host" labelField="host" width="240" keyDown="{keyDownHandler(event)}"/>
-			
-		</s:HGroup>
+	<s:Group left="9" top="9" right="9" bottom="9">
 		
-		<s:HGroup gap="20" width="100%"
-				  verticalAlign="middle">
-
-			<s:Label text="{ resourceManager.getString( 'LoginForm', 'username' ) }" width="100%"
-					 color="white" fontFamily="Verdana" fontSize="14" textAlign="right"/>
-
-			<s:TextInput id="user" text="@{ username }" width="240" keyDown="{keyDownHandler(event)}"/>
-
-		</s:HGroup>
-
-		<s:HGroup gap="20" width="100%"
-				  verticalAlign="middle">
-
-			<s:Label text="{ resourceManager.getString( 'LoginForm', 'password' ) }" width="100%"
-					 color="white" fontFamily="Verdana" fontSize="14" textAlign="right"/>
-
-			<s:TextInput id="pass" text="@{ password }" width="240" displayAsPassword="true" keyDown="{keyDownHandler(event)}" />
-
-		</s:HGroup>
-
-
-
-		<s:HGroup gap="20" width="100%"
-				  verticalAlign="middle">
-
-			<s:Label text="{ resourceManager.getString( 'LoginForm', 'language' ) }" width="100%"
-					 color="white" fontFamily="Verdana" fontSize="14" textAlign="right"/>
-
-			<s:ComboBox id="selectLang"
-						dataProvider="{ languages }" labelField="description" width="240"
-						change="selectLang_changeHandler()"
-						selectedItem="@{ _selectedLanguage }"/>
-
-		</s:HGroup>
-
-	</s:VGroup>
-
-	<s:Group height="35" width="100%"
-			 bottom="0">
-
-		<s:Button id="submitButton"
-				  height="35" label="{ resourceManager.getString( 'LoginForm', 'ok_button' ) }" minWidth="100"
-				  fontFamily="Verdana" fontSize="14" right="-2" skinClass="net.vdombox.ide.core.view.skins.InitialWindowButtonSkin"
-				  click="submitButton_clickHandler()"/>
+		<s:Rect width="100%" height="100%">
+			<s:fill>
+				<s:BitmapFill source = "@Embed('icons/bg_logo.png')" smooth="true" fillMode="repeat"/>
+			</s:fill>
+		</s:Rect>
+		
+		
+		<s:VGroup gap="10" styleName="loginForm"
+				  left="20" right="100" top="50">
+			<s:HGroup gap="20" width="100%"
+					  verticalAlign="middle">
+				
+				<s:Label text="{ resourceManager.getString( 'LoginForm', 'hostname' ) }" width="100%"
+						 color="white" fontFamily="Verdana" fontSize="14" textAlign="right"/>
+				
+				<s:ComboBox id="host" openOnInput="false" labelField="host" width="240" 
+							keyDown="{keyDownHandler(event)}"/>
+				
+			</s:HGroup>
+			
+			<s:HGroup gap="20" width="100%"
+					  verticalAlign="middle">
+				
+				<s:Label text="{ resourceManager.getString( 'LoginForm', 'username' ) }" width="100%"
+						 color="white" fontFamily="Verdana" fontSize="14" textAlign="right"/>
+				
+				<s:TextInput id="user" text="@{ username }" width="240" keyDown="{keyDownHandler(event)}"/>
+				
+			</s:HGroup>
+			
+			<s:HGroup gap="20" width="100%"
+					  verticalAlign="middle">
+				
+				<s:Label text="{ resourceManager.getString( 'LoginForm', 'password' ) }" width="100%"
+						 color="white" fontFamily="Verdana" fontSize="14" textAlign="right"/>
+				
+				<s:TextInput id="pass" text="@{ password }" width="240" displayAsPassword="true" keyDown="{keyDownHandler(event)}" />
+				
+			</s:HGroup>
+			
+			
+			
+			<s:HGroup gap="20" width="100%"
+					  verticalAlign="middle">
+				
+				<s:Label text="{ resourceManager.getString( 'LoginForm', 'language' ) }" width="100%"
+						 color="white" fontFamily="Verdana" fontSize="14" textAlign="right"/>
+				
+				<s:ComboBox id="selectLang"
+							dataProvider="{ languages }" labelField="description" width="240"
+							change="selectLang_changeHandler()"
+							selectedItem="@{ _selectedLanguage }"/>
+				
+			</s:HGroup>
+			
+		</s:VGroup>
+		
+		<s:Group height="35" width="100%"
+				 bottom="0">
+			
+			<s:Button id="submitButton"
+					  height="35" label="{ resourceManager.getString( 'LoginForm', 'ok_button' ) }" minWidth="100"
+					  fontFamily="Verdana" fontSize="14" right="-2" skinClass="net.vdombox.ide.core.view.skins.InitialWindowButtonSkin"
+					  click="submitButton_clickHandler()"/>
+		</s:Group>
 	</s:Group>
+	
+	
 </s:Group>
 
 
