App manadger refactor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7216 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/IconChooserWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/IconChooserWindowSkin.mxml
@@ -24,7 +24,7 @@
 			
 			private function doubleClickedFun( event : Event ) : void
 			{
-				hostComponent.closeHandler();
+				hostComponent.selectIcon();
 			}
 			
 		]]>
@@ -60,7 +60,7 @@
 			<s:VGroup right="10" height="42" verticalAlign="middle" >
 				<s:Button id="closeButton"
 						  skinClass="net.vdombox.view.skins.MainCloseBtnSkin"
-						  click="hostComponent.closeHandler()"/>	
+						  click="hostComponent.closeWindow()"/>	
 			</s:VGroup>
 			
 		</s:Group>	
@@ -79,7 +79,7 @@
 		
 		<s:Button id="btnOK" 
 			label="OK" right="20"
-			click="hostComponent.closeHandler()"/>
+			click="hostComponent.selectIcon()"/>
 		
 	</s:VGroup>
 	
