--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ErrorViewSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ErrorViewSkin.mxml
@@ -14,12 +14,12 @@
 	<s:Group id="contentGroup"
 			 bottom="70" left="100" right="30" top="70"/>
 
-	<s:Group height="35" width="100%"
-			 bottom="0">
+	<s:Group height="27" width="100%"
+			 bottom="37" right="40">
 
-		<s:Button id="backButton"
-				  height="35" label="{ resourceManager.getString( 'LoginForm', 'back_button' ) }" minWidth="100"
-				  fontFamily="Verdana" fontSize="14" right="-2" skinClass="net.vdombox.ide.core.view.skins.InitialWindowButtonSkin"/>
+		<s:Button id="backButton" cornerRadius="15"
+				  height="27" label="{ resourceManager.getString( 'LoginForm', 'back_button' ) }" minWidth="100"
+				  fontFamily="Verdana" fontSize="14" right="-2"/>
 	</s:Group>
 
 </s:SparkSkin>
