--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/InitialWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/InitialWindowSkin.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 height="410" width="583">
+			 height="410" width="580">
 
 	<fx:Metadata>
 		[HostComponent("Object")]
@@ -14,60 +14,39 @@
 		<s:State name="disabledAndInactive" stateGroups="disabledGroup, inactiveGroup"/>
 	</s:states>
 
-	<!-- main layer -->
-	<s:Group bottom="0" left="0" right="0" top="0">
 
-		<!-- layer 1: background fill -->
-		<!--- Defines the background color of the skin. -->
-		<s:Rect id="backgroundRect"
-				bottom="0" left="0" right="0" top="0">
+	<s:Rect width="100%" height="100%" radiusX="10" radiusY="10">
+		<s:fill>
+			<s:SolidColor color="#424242"/>
+		</s:fill>
+	</s:Rect>
+	
+	<s:Group left="9" top="9" right="9" bottom="9">
+		
+		<s:Rect width="100%" height="100%">
 			<s:fill>
-				<s:LinearGradient rotation="90">
-					<s:entries>
-						<s:GradientEntry color="#474b50"
-										 ratio="0.0"/>
-						<s:GradientEntry color="#151515"
-										 ratio="0.7"/>
-					</s:entries>
-				</s:LinearGradient>
+				<s:BitmapFill source = "@Embed('icons/bg_logo.png')" smooth="true" fillMode="repeat"/>
 			</s:fill>
 		</s:Rect>
-
-		<s:Group height="35" width="100%"
-				 bottom="0">
-			<s:Rect bottom="0" left="0" right="0" top="0">
-				<s:fill>
-					<s:LinearGradient rotation="90">
-						<s:entries>
-							<s:GradientEntry color="#EBEBEB"/>
-							<s:GradientEntry color="#C4C5C6"
-											 ratio="0.7"/>
-						</s:entries>
-					</s:LinearGradient>
-				</s:fill>
-			</s:Rect>
-
-			<s:Line left="0" right="0" top="1">
-				<s:stroke>
-					<s:SolidColorStroke color="#C4C5C6"/>
-				</s:stroke>
-			</s:Line>
-
-			<s:Button id="exitButton"
-					  height="35" label="{ resourceManager.getString( 'LoginForm', 'quit_button' ) }" minWidth="100"
-					  fontFamily="Verdana" fontSize="14" left="-2" skinClass="net.vdombox.ide.core.view.skins.InitialWindowButtonSkin"/>
-		</s:Group>
 		
-		<s:BitmapImage source="@Embed(source='../assets/login/vdom_name.png')"
-					   bottom="35" right="0"/>
+		<s:HGroup>
+			<s:Button id="exitButton" cornerRadius="15"
+					  height="29" label="{ resourceManager.getString( 'LoginForm', 'quit_button' ) }" minWidth="100"
+					  fontFamily="Arial" fontSize="14" bottom="50" left="300" />
+			
+			<s:Button id="submitButton" cornerRadius="15"
+					  height="29" label="{ resourceManager.getString( 'LoginForm', 'ok_button' ) }" minWidth="100"
+					  fontFamily="Arial" fontSize="14"
+					 />
+		</s:HGroup>
+
 		
-		<!-- layer 4: contentGroup -->
+	
 		<s:Group id="contentGroup"
 				 height="100%" width="100%"/>
-		
-	</s:Group>
 
-	<!-- mask for main layer -->
+
+	</s:Group>
 	
 
 	
