--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/InitialWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/InitialWindowSkin.mxml
@@ -21,33 +21,12 @@
 		</s:fill>
 	</s:Rect>
 	
-	<s:Group left="9" top="9" right="9" bottom="9">
-		
-		<s:Rect width="100%" height="100%">
-			<s:fill>
-				<s:BitmapFill source = "@Embed('icons/bg_logo.png')" smooth="true" fillMode="repeat"/>
-			</s:fill>
-		</s:Rect>
-		
-		<s:HGroup>
-			<s:Button id="exitButton" cornerRadius="15"
-					  height="29" label="{ resourceManager.getString( 'LoginForm', 'quit_button' ) }" minWidth="100"
-					  fontFamily="Arial" fontSize="14" bottom="50" left="300" />
-			
-			<s:Button id="submitButton" cornerRadius="15"
-					  height="29" label="{ resourceManager.getString( 'LoginForm', 'ok_button' ) }" minWidth="100"
-					  fontFamily="Arial" fontSize="14"
-					 />
-		</s:HGroup>
-
-		
+	<s:Rect left="9" top="9" right="9" bottom="9">
+		<s:fill>
+			<s:BitmapFill source = "@Embed('icons/bg_logo.png')" smooth="true" fillMode="repeat"/>
+		</s:fill>
+	</s:Rect>
 	
-		<s:Group id="contentGroup"
-				 height="100%" width="100%"/>
-
-
-	</s:Group>
-	
-
+	<s:Group id="contentGroup" left="9" top="9" right="9" bottom="9"/>
 	
 </s:SparkSkin>
