--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/SaveButtonSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/SaveButtonSkin.mxml
@@ -17,7 +17,7 @@
 		<s:State name="notsave" />
 	</s:states>
 		
-	<s:Rect width="100%" height="100%">
+	<s:Rect width="100%" height="100%" radiusX="5" radiusY="5">
 		<s:fill>
 			<s:LinearGradient rotation="90">
 				<s:GradientEntry color="#FFFFFF" />
